name:                partial-polyline-similarity
version:             0.1.0.0
synopsis:            Implementation of Guibas and Cohen (1997) algorithm for partial polyline similarity.
license:             MIT
license-file:        LICENSE
author:              Justin Manley
maintainer:          manleyjster@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Align
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite pssp-test
  type:                exitcode-stdio-1.0
  build-depends:       base,
                       HUnit,
                       HUnit-approx,
                       tasty,
                       tasty-quickcheck,
                       tasty-hunit,
                       partial-polyline-similarity,
                       QuickCheck
  main-is:             AlignTest.hs
  hs-source-dirs:      tests
