name:                partial-polyline-similarity
version:             0.1.0.0
synopsis:            Implementation of Guibas and Cohen (1997) algorithm for partial polyline similarity.
license:             MIT
license-file:        LICENSE
author:              Justin Manley
maintainer:          manleyjster@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

-- Note: In the event of a dependency breakage, reinstall all dependencies with
-- the '>=' in the constraints below changed to '=='. This should (temporarily)
-- fix the breakage.

library
  exposed-modules:     Align,
                       TopologicalSweep,
                       HorizonTree,
                       Line
  build-depends:       base >= 4.8,
                       containers >= 0.5.6.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite pssp-test
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.8,
                       containers >= 0.5.6.2,
                       HUnit >= 1.3,
                       HUnit-approx >= 1.1,
                       tasty >= 0.11.2,
                       tasty-quickcheck >= 0.8.4,
                       tasty-hunit >= 0.9.2,
                       partial-polyline-similarity,
                       QuickCheck >= 2.8.1
  main-is:             Test.hs
  hs-source-dirs:      tests
